RESOLVED FIXED140791
UserData decoding of WKTypeRefWrapper always fails
https://bugs.webkit.org/show_bug.cgi?id=140791
Summary UserData decoding of WKTypeRefWrapper always fails
Tim Horton
Reported 2015-01-22 15:17:25 PST
UserData decoding of WKTypeRefWrapper always fails
Attachments
Patch (1.27 KB, patch)
2015-01-22 15:17 PST, Tim Horton
andersca: review+
Tim Horton
Comment 1 2015-01-22 15:17:59 PST
Tim Horton
Comment 2 2015-01-22 15:22:04 PST
Note You need to log in before you can comment on or make changes to this bug.