UserData decoding of WKTypeRefWrapper always fails https://bugs.webkit.org/show_bug.cgi?id=140791 <rdar://problem/19438402>

Reviewed by Anders Carlsson.

* Shared/mac/ObjCObjectGraph.mm:
(WebKit::ObjCObjectGraph::decode):
Add a missing break.


Canonical link: https://commits.webkit.org/158780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178958 268f45cc-cd09-0410-ab3c-d52691b4dbfc